fix(table-of-contents): ensure anchor is visible upon jump-to-content
Introduces `bx--tableofcontents__contents` CSS class that ensures
`<a name="anchorname">` is visible upon getting scroll to by selection
of an item in `<dds-table-of-contents>`.

Refs #4264.

--- a/packages/web-components/examples/codesandbox/components/table-of-contents/src/index.scss
+++ b/packages/web-components/examples/codesandbox/components/table-of-contents/src/index.scss
@@ -1,18 +1,26 @@
 //
+// @license
+//
 // Copyright IBM Corp. 2020
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
 //
 
-@import 'carbon-components/scss/globals/scss/vendor/@carbon/elements/scss/colors/colors';
-@import 'carbon-components/scss/globals/scss/typography';
+// `enable-css-custom-properties` and `grid-columns-16` feature flags are requirements for Carbon for IBM.com styles
+$feature-flags: (
+  enable-css-custom-properties: true,
+  grid-columns-16: true,
+);
+
 @import '@carbon/ibmdotcom-styles/scss/globals/vars';
 @import '@carbon/ibmdotcom-styles/scss/components/tableofcontents/tableofcontents';
 
-.dds-ce-demo--table-of-contents {
-  h3 {
-    padding-top: rem(16px);
-    padding-bottom: rem(32px);
-  }
+body {
+  padding: $spacing-09;
+}
+
+h3 {
+  padding-top: rem(16px);
+  padding-bottom: rem(32px);
 }
